refactor: pass Authentication explicitly and fix post-review bugs
 Move auth retrieval out of SecurityContextHolder in services by accepting
 Authentication/accountId as explicit parameters from resolvers, eliminating
 hidden coupling to thread-local security context.

 Also fix bugs surfaced in code review:
 - deleteTransaction never called the repository delete method
 - SpEL typo resulty → #result in @Notifiable on deleteTransaction
 - @Transactional missing on deleteTransaction
 - household() resolver fetched the same Household from DB twice
 - households() resolver fired one profile query per household (N+1);
   replaced with a single bulk query via ProfileRepository
 - HouseholdDTO exposed a raw JPA Profile entity instead of ProfileDTO
 - Query.currentUserProfile in schema had no resolver (broken since it was
   added); removed the orphaned schema entry — the feature is now correctly
   implemented as Household.currentUserProfile
 - EventsServiceTest and TransactionsServiceTest used old method signatures
   that no longer compile after the auth refactor